# podcell

./: .gitattributes  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/actions/devshell/check/: action.yml
.github/actions/podcell/check/: action.yml
.github/workflows/: check.yml  clippy.yml  format.yml  main.yml  posix_build.yml
.github/workflows/scripts/: install_rust.sh
src/: main.rs
src/commands/: create.rs  enter.rs  init.rs  list.rs  mod.rs  rm.rs  send.rs  shell.rs  start.rs  stop.rs
src/utils/: group.rs  host.rs  mod.rs  mount.rs  package_manager.rs  passwd.rs  podman.rs  which.rs
