#
# Copyright (c) 2025-present, Alessandro Gario
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "devshell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
clap = { version = "4.5.42", features = ["derive"] }
thiserror = "2.0.16"
