#
# Copyright (c) 2025-present, Alessandro Gario
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "devshell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
