#
# Copyright (c) 2025-present, Alessandro Gario
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "podcell"
version = "0.1.0"
edition = "2024"
description = "A simple Podman-based development environment manager."
license = "Apache-2.0"
repository = "https://github.com/alessandrogario/podcell"
keywords = ["podman", "container", "cli", "sandbox", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
